tests/errors/construction/initializer-no-field-names.fn
---
Description: Initializer list with values but no field names
Expected: compile error
---

type Vector2
{
    x: f32
    y: f32

    init{}
}

type Program
{
    fn Main -> i32
    {
        var a = Vector2 { 1.0, 2.0 }
        return 0
    }
}
